adjusted paddings to fix border spacing at desktop

--- a/src/components/ActiveVideoComments/ActiveVideoComments.scss
+++ b/src/components/ActiveVideoComments/ActiveVideoComments.scss
@@ -10,10 +10,15 @@
 
     @include desktop {
         padding-left: 0;
+        padding-right: 0;
     }
 
     &__new {
         display: flex;
+
+        @include desktop {
+            padding-right: 1.5rem
+        }
     }
 
     &__avatar {
